--- a/docs/docs/guides/developer-guide/events/index.mdx
+++ b/docs/docs/guides/developer-guide/events/index.mdx
@@ -92,7 +92,7 @@ Here's an example where we subscribe to the `ProductEvent` and use it to trigger
 
 ```ts title="src/plugins/storefront-build/storefront-build.plugin.ts"
 import { OnModuleInit } from '@nestjs/common';
-import { EventBus, ProductEvent, PluginCommonModule, VendurePlugin } from '@deenruv/core';
+import { EventBus, ProductEvent, PluginCommonModule, DeenruvPlugin } from '@deenruv/core';
 
 import { StorefrontBuildService } from './services/storefront-build.service';
 
@@ -148,7 +148,7 @@ import { Injectable, OnModuleInit } from '@nestjs/common';
 import {
     EventBus,
     PluginCommonModule,
-    VendurePlugin,
+    DeenruvPlugin,
     ProductEvent,
     ProductVariantEvent,
 } from '@deenruv/core';
@@ -195,17 +195,17 @@ export class MyPluginService {
 
 ## Creating custom events
 
-You can create your own custom events by extending the [`VendureEvent`](/reference/typescript-api/events/deenruv-event) class. For example, to create a custom event which is triggered when a customer submits a review, you could do this:
+You can create your own custom events by extending the [`DeenruvEvent`](/reference/typescript-api/events/deenruv-event) class. For example, to create a custom event which is triggered when a customer submits a review, you could do this:
 
 ```ts title="src/plugins/reviews/events/review-submitted.event.ts"
-import { ID, RequestContext, VendureEvent } from '@deenruv/core';
+import { ID, RequestContext, DeenruvEvent } from '@deenruv/core';
 import { ProductReviewInput } from '../types';
 
 /**
  * @description
  * This event is fired whenever a ProductReview is submitted.
  */
-export class ReviewSubmittedEvent extends VendureEvent {
+export class ReviewSubmittedEvent extends DeenruvEvent {
     constructor(
         public ctx: RequestContext,
         public input: ProductReviewInput,
