--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -6,6 +6,7 @@
   "cancel": "Anuluj",
   "accept": "Akceptuj",
   "back": "Powrót",
+  "show": "Pokaż",
   "defaultChannel": "Kanał domyślny",
   "confirmationDialog": {
     "title": "Potwierdź swoje działanie",
