--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -94,6 +94,7 @@
     "updatedAt": "Updated at"
   },
   "actionsMenu": {
+    "title": "Actions",
     "open": "Open",
     "copyId": "Copy ID",
     "view": "View",
