--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -3,6 +3,8 @@
     "filter": "Filter type",
     "select": "Select type"
   },
+  "withSelected": "With $1 selected",
+  "clearSelected": "Clear selected",
   "true": "True",
   "false": "False",
   "from": "From",
