--- a/packages/admin-dashboard/src/locales/en/products.json
+++ b/packages/admin-dashboard/src/locales/en/products.json
@@ -4,6 +4,7 @@
   "baseInfoId": "Id: {{value}}",
   "baseInfoCreated": "Created: {{value}}",
   "baseInfoUpdated": "Updated: {{value}}",
+  "facetPlaceholder": "Add facets",
   "group": "Group",
   "image": "Image",
   "name": "Name",
