customer lists view, generic list fixes/tweaks

--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -71,6 +71,7 @@
   "menu": {
     "dashboard": "deska rozdzielcza",
     "products": "produkty",
+    "customers": "klienci",
     "collections": "kolekcje",
     "orders": "zamówienia",
     "facets": "aspekty",
