--- a/packages/admin-dashboard/src/locales/en/common.json
+++ b/packages/admin-dashboard/src/locales/en/common.json
@@ -72,6 +72,7 @@
   "menu": {
     "dashboard": "dashboard",
     "products": "products",
+    "customers": "customers",
     "productVariants": "product variants",
     "collections": "collections",
     "orders": "orders",
