--- a/plugins/dashboard-widgets-plugin/src/plugin-ui/locales/pl/test.json
+++ b/plugins/dashboard-widgets-plugin/src/plugin-ui/locales/pl/test.json
@@ -35,5 +35,6 @@
     "chooseEndDate": "Data końcowa",
     "orderTotalProductsCount": "Liczba sprzedanych produktów",
     "emptyDataTitle": "Brak zamówień",
-    "emptyData": "Wygląda na to, że nie ma zamówień dla wybranego okresu"
+    "emptyData": "Wygląda na to, że nie ma zamówień dla wybranego okresu",
+    "lastRefresh": "Ostatnia aktualizacja: "
 }
