--- a/plugins/dashboard-widgets-plugin/src/plugin-ui/locales/en/test.json
+++ b/plugins/dashboard-widgets-plugin/src/plugin-ui/locales/en/test.json
@@ -1,10 +1,10 @@
 {
     "metrics": "Metrics",
     "averageOrderValue": "Average order value",
-    "averageOrdersValue": "Average orders value",
+    "averageOrdersValue": "Average order value",
     "bestsellers": "Bestsellers",
     "categories": "Popular categories",
-    "showAll": "Show all",
+    "showAll": "All",
     "sold": "Sold: ",
     "soldValue": "Sold value: ",
     "orderCount": "Order count",
@@ -34,10 +34,10 @@
     "mothlyInterval": "Monthly",
     "lastMonthInterval": "Last month",
     "yearlyInterval": "Yearly",
-    "firstYearQuarterInterval": "First quarter",
-    "secondYearQuarterInterval": "Second quarter",
-    "thirdYearQuarterInterval": "Third quarter",
-    "fourthYearQuarterInterval": "Fourth quarter",
+    "firstYearQuarterInterval": "I quarter",
+    "secondYearQuarterInterval": "II quarter",
+    "thirdYearQuarterInterval": "III quarter",
+    "fourthYearQuarterInterval": "IV quarter",
     "customInterval": "Custom",
     "chooseStartDate": "Choose start date",
     "chooseEndDate": "Choose end date",
@@ -49,11 +49,6 @@
     "sortBy": "Sort by",
     "sortByCount": "Sort by count",
     "sortByNet": "Sort by values",
-    "showFirstFive": "Show first five",
-    "variantID": "Variant ID",
-    "selectProducts": "Select products...",
-    "selectedProducts": "Selected products",
-    "searchProduct": "Search product...",
-    "clearProducts": "Clear products",
-    "noProductsFound": "No products found"
+    "showFirstFive": "Top five",
+    "variantID": "Variant ID"
 }
