--- a/plugins/dashboard-widgets-plugin/src/plugin-ui/locales/pl/test.json
+++ b/plugins/dashboard-widgets-plugin/src/plugin-ui/locales/pl/test.json
@@ -1,10 +1,10 @@
 {
     "metrics": "Wykres szczegółowy",
     "averageOrderValue": "Średnia wartość zamówienia",
-    "averageOrdersValue": "Średnia wartość zamówień",
+    "averageOrdersValue": "Średnia wartość zamówienia",
     "bestsellers": "Bestsellery",
     "categories": "Popularne kategorie",
-    "showAll": "Pokaż wszystkie",
+    "showAll": "Wszystkie",
     "sold": "Sprzedano: ",
     "soldValue": "Wartość sprzedaży: ",
     "orderCount": "Ilość zamówień",
@@ -20,24 +20,24 @@
     "totalOrdersValue": "Przychód",
     "today": "Dzisiaj",
     "yesterday": "Wczoraj",
-    "thisWeek": "W tym tygodniu",
-    "lastWeek": "W zeszłym tygodniu",
-    "thisMonth": "W tym miesiącu",
-    "lastMonth": "Ostatni miesiąc",
-    "thisYear": "W tym roku",
+    "thisWeek": "Ten tydzień",
+    "lastWeek": "Poprzedni tydzień",
+    "thisMonth": "Ten miesiąć",
+    "lastMonth": "Poprzedni miesiąc",
+    "thisYear": "Ten rok",
     "gross": "Brutto",
     "net": "Netto",
-    "thisWeekInterval": "W tym tygodniu",
+    "thisWeekInterval": "Ten tydzień",
     "weeklyInterval": "Tydzień",
-    "lastWeekInterval": "W zeszłym tygodniu",
-    "thisMonthInterval": "W tym miesiącu",
+    "lastWeekInterval": "Poprzedni tydzień",
+    "thisMonthInterval": "Ten miesiąc",
     "mothlyInterval": "Miesiąc",
-    "lastMonthInterval": "Ostatni miesiąc",
+    "lastMonthInterval": "Poprzedni miesiąc",
     "yearlyInterval": "Rok",
-    "firstYearQuarterInterval": "Pierwszy kwartał",
-    "secondYearQuarterInterval": "Drugi kwartał",
-    "thirdYearQuarterInterval": "Trzeci kwartał",
-    "fourthYearQuarterInterval": "Czwarty kwartał",
+    "firstYearQuarterInterval": "I kwartał",
+    "secondYearQuarterInterval": "II kwartał",
+    "thirdYearQuarterInterval": "III kwartał",
+    "fourthYearQuarterInterval": "IV kwartał",
     "customInterval": "Niestandardowy",
     "chooseStartDate": "Data początkowa",
     "chooseEndDate": "Data końcowa",
@@ -49,11 +49,6 @@
     "sortBy": "Sortuj po",
     "sortByCount": "Sortuj po ilości",
     "sortByNet": "Sortuj po wartości",
-    "showFirstFive": "Pokaż pierwsze pięć",
-    "variantID": "ID wariantu",
-    "selectProducts": "Wybierz produkt...",
-    "selectedProducts": "wybrane produkty",
-    "searchProduct": "Wyszukaj produkt...",
-    "clearProducts": "Wyczyść produkty",
-    "noProductsFound": "Nie znaleziono produktów"
+    "showFirstFive": "Top pięć",
+    "variantID": "ID wariantu"
 }
