--- a/packages/admin-dashboard/src/locales/en/common.json
+++ b/packages/admin-dashboard/src/locales/en/common.json
@@ -514,5 +514,61 @@
       "description": "Choose product variants from the list below",
       "pick": "Pick product variant"
     }
+  },
+  "history": {
+    "edit": "Edit",
+    "delete": "Delete",
+    "deleteNoteHeader": "Delete note?",
+    "editNoteHeader": "Edit note",
+    "isPrivate": "Note is private",
+    "isPrivateDescription": "(optional)",
+    "toAdmins": "Visible to admins only",
+    "toAdminsAndCustomer": "Visible to admins and customer",
+    "sure": "Are you sure?",
+    "cancel": "Cancel",
+    "addComment": "Add comment",
+    "addCommentButton": "Add comment",
+    "sureDescription": "Deleted note can not be restored",
+    "showPayment": "Show payment",
+    "paymentId": "Payment ID: {{value}}",
+    "showFulfillment": "Show fulfillment",
+    "fulfillmentId": "Fulfillment ID: {{value}}",
+    "deleteError": "Something went wrong while deleting note from order: {{value}}",
+    "editError": "Something went wrong while editing note",
+    "addError": "Something went wrong while adding note to order",
+    "from": "From:",
+    "to": "to:",
+    "createdAt": "Created at: {{value}}",
+    "updatedAt": "Updated at: {{value}}",
+    "private": "private",
+    "public": "public",
+    "noteContent": "Note content: ",
+    "entryType": {
+      "CUSTOMER_REGISTERED": "Customer registered",
+      "CUSTOMER_VERIFIED": "Customer verified",
+      "CUSTOMER_DETAIL_UPDATED": "Customer detail updated",
+      "CUSTOMER_ADDED_TO_GROUP": "Customer added to group",
+      "CUSTOMER_REMOVED_FROM_GROUP": "Customer removed from group",
+      "CUSTOMER_ADDRESS_CREATED": "Customer address created",
+      "CUSTOMER_ADDRESS_UPDATED": "Customer address updated",
+      "CUSTOMER_ADDRESS_DELETED": "Customer address deleted",
+      "CUSTOMER_PASSWORD_UPDATED": "Customer password updated",
+      "CUSTOMER_PASSWORD_RESET_REQUESTED": "Customer password reset requested",
+      "CUSTOMER_PASSWORD_RESET_VERIFIED": "Customer password reset verified",
+      "CUSTOMER_EMAIL_UPDATE_REQUESTED": "Customer email update requested",
+      "CUSTOMER_EMAIL_UPDATE_VERIFIED": "Customer email update verified",
+      "CUSTOMER_NOTE": "Customer note",
+      "ORDER_STATE_TRANSITION": "Order state transition",
+      "ORDER_PAYMENT_TRANSITION": "Order payment transition",
+      "ORDER_FULFILLMENT": "Order fulfillment",
+      "ORDER_CANCELLATION": "Order cancellation",
+      "ORDER_REFUND_TRANSITION": "Order refund transition",
+      "ORDER_FULFILLMENT_TRANSITION": "Order fulfillment transition",
+      "ORDER_NOTE": "Order note",
+      "ORDER_COUPON_APPLIED": "Order coupon applied",
+      "ORDER_COUPON_REMOVED": "Order coupon removed",
+      "ORDER_MODIFIED": "Order modified",
+      "ORDER_CUSTOMER_UPDATED": "Order customer updated"
+    }
   }
 }
