Change logical operator when searching and fix filters

--- a/packages/admin-dashboard/src/locales/en/table.json
+++ b/packages/admin-dashboard/src/locales/en/table.json
@@ -47,6 +47,7 @@
     "enabled": "Enabled",
     "name": "Name",
     "firstName": "First name",
+    "phoneNumber": "Phone number",
     "emailAddress": "Email address",
     "slug": "Slug",
     "description": "Description",
