--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -44,6 +44,7 @@
     "enabled": "Enabled",
     "name": "Name",
     "firstName": "First name",
+    "phoneNumber": "Numer telefonu",
     "emailAddress": "Email address",
     "slug": "Slug",
     "description": "Description",
