new statistics with views

--- a/plugins/dashboard-widgets-plugin/src/plugin-ui/locales/pl/test.json
+++ b/plugins/dashboard-widgets-plugin/src/plugin-ui/locales/pl/test.json
@@ -1,54 +1,63 @@
 {
-    "metrics": "Wykres szczegółowy",
-    "averageOrderValue": "Średnia wartość zamówienia",
-    "averageOrdersValue": "Średnia wartość zamówienia",
-    "bestsellers": "Bestsellery",
-    "categories": "Popularne kategorie",
-    "showAll": "Wszystkie",
-    "sold": "Sprzedano: ",
-    "soldValue": "Wartość sprzedaży: ",
-    "orderCount": "Ilość zamówień",
-    "orderTotal": "Wartość zamówień",
-    "dataTypes": "Dostępne typy danych",
-    "intervalTypes": "Typ interwału",
-    "selectDataType": "Wybierz typ danych",
-    "selectIntervalType": "Wybierz tryb interwału",
-    "latestOrders": "Ostatnie zamówienia",
-    "ordersSummary": "Sprzedaż",
-    "payment": "Płatność",
-    "totalOrdersCount": "Zamówienia",
-    "totalOrdersValue": "Przychód",
-    "today": "Dzisiaj",
-    "yesterday": "Wczoraj",
-    "thisWeek": "Ten tydzień",
-    "lastWeek": "Poprzedni tydzień",
-    "thisMonth": "Ten miesiąć",
-    "lastMonth": "Poprzedni miesiąc",
-    "thisYear": "Ten rok",
-    "gross": "Brutto",
-    "net": "Netto",
-    "thisWeekInterval": "Ten tydzień",
-    "weeklyInterval": "Tydzień",
-    "lastWeekInterval": "Poprzedni tydzień",
-    "thisMonthInterval": "Ten miesiąc",
-    "mothlyInterval": "Miesiąc",
-    "lastMonthInterval": "Poprzedni miesiąc",
-    "yearlyInterval": "Rok",
-    "firstYearQuarterInterval": "I kwartał",
-    "secondYearQuarterInterval": "II kwartał",
-    "thirdYearQuarterInterval": "III kwartał",
-    "fourthYearQuarterInterval": "IV kwartał",
-    "customInterval": "Niestandardowy",
-    "chooseStartDate": "Data początkowa",
-    "chooseEndDate": "Data końcowa",
-    "orderTotalProductsCount": "Liczba sprzedanych produktów",
-    "orderTotalProductsValue": "Wartość sprzedanych produktów",
-    "emptyDataTitle": "Brak zamówień",
-    "emptyData": "Wygląda na to, że nie ma zamówień dla wybranego okresu",
-    "lastRefresh": "Ostatnia aktualizacja: ",
-    "sortBy": "Sortuj po",
-    "sortByCount": "Sortuj po ilości",
-    "sortByNet": "Sortuj po wartości",
-    "showFirstFive": "Top pięć",
-    "variantID": "ID wariantu"
+  "metrics": "Wykres szczegółowy",
+  "averageOrderValue": "Średnia wartość zamówień",
+  "bestsellers": "Bestsellery",
+  "categories": "Popularne kategorie",
+  "showAll": "Wszystkie",
+  "sold": "Sprzedano: ",
+  "summary": "Podsumowanie sprzedaży",
+  "soldValue": "Wartość sprzedaży: ",
+  "orderCount": "Ilość zamówień",
+  "orderTotal": "Wartość zamówień",
+  "dataTypes": "Dostępne typy danych",
+  "intervalTypes": "Typ interwału",
+  "selectDataType": "Wybierz typ danych",
+  "selectIntervalType": "Wybierz tryb interwału",
+  "latestOrders": "Ostatnie zamówienia",
+  "ordersSummary": "Sprzedaż",
+  "payment": "Płatność",
+  "totalOrdersCount": "Zamówienia",
+  "totalOrdersValue": "Przychód",
+  "today": "Dzisiaj",
+  "yesterday": "Wczoraj",
+  "thisWeek": "Ten tydzień",
+  "lastWeek": "Poprzedni tydzień",
+  "thisMonth": "Ten miesiąc",
+  "lastMonth": "Poprzedni miesiąc",
+  "thisYear": "Ten rok",
+  "lastYear": "Poprzedni rok",
+  "gross": "Brutto",
+  "net": "Netto",
+  "firstYearQuarterInterval": "I kwartał",
+  "secondYearQuarterInterval": "II kwartał",
+  "thirdYearQuarterInterval": "III kwartał",
+  "fourthYearQuarterInterval": "IV kwartał",
+  "customInterval": "Niestandardowy",
+  "chooseStartDate": "Data początkowa",
+  "chooseEndDate": "Data końcowa",
+  "orderTotalProductsCount": "Liczba sprzedanych produktów",
+  "orderTotalProductsValue": "Wartość sprzedanych produktów",
+  "emptyDataTitle": "Brak zamówień",
+  "emptyData": "Wygląda na to, że nie ma zamówień dla wybranego okresu",
+  "lastRefresh": "Ostatnia aktualizacja: ",
+  "sortBy": "Sortuj po",
+  "sortByCount": "Sortuj po ilości",
+  "sortByNet": "Sortuj po wartości",
+  "showFirstFive": "Top pięć",
+  "variantID": "ID wariantu",
+  "previous": "Poprzednio",
+  "netSold": "Sprzedaż netto",
+  "averageNetSold": "Średnia sprzedaż netto",
+  "orders": "Zamówienia",
+  "soldProducts": "Sprzedane produkty",
+  "compare": "Porównaj z poprzednim okresem",
+  "selectOrderStates": "Wybierz stany zamówień",
+  "selectedOrderStates": "Wybrane stany zamówień",
+  "searchOrderStates": "Wyszukaj stany zamówień...",
+  "noOrderStatesFound": "Nie znaleziono stanów zamówień",
+  "selectedProducts": "Wybrane produkty",
+  "selectProducts": "Wybierz produkty..",
+  "searchProducts": "Wyszukaj parodukt..",
+  "noProductsFound": "Nie znaleziono produktów",
+  "clearSelected": "Wyczyść wybrane"
 }
