--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -65,7 +65,7 @@
   },
   "menuGroups": {
     "shop": "Mój sklep",
-    "settings": "Ustawienia globalne",
+    "settings": "Ustawienia",
     "users": "Użytkownicy",
     "shipping": "Wysyłka i płatności"
   },
@@ -77,6 +77,7 @@
     "orders": "zamówienia",
     "facets": "aspekty",
     "channels": "kanały",
+    "globalSettings": "ustawienia globalne",
     "roles": "role",
     "admins": "administratorzy",
     "stock": "zapas",
