--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -509,5 +509,6 @@
       "description": "Wybierz warianty produktów z listy",
       "pick": "Wybierz wariant produktu"
     }
-  }
+  },
+  "noImage": "Ten element nie ma obrazka"
 }
